# Image

./: CMakeLists.txt  LICENSE.txt  README.md
src/: Image.cpp  Image.h  Interface.cpp  Interface.h
